Update: modified getRelatedChallenges_MoreThanThreeRelatedChallenges_ReturnsThreeRandom() following Sonarqube suggestion